--- a/pages/404.md
+++ b/pages/404.md
@@ -5,4 +5,4 @@ permalink: /404.html
 hide: true
 ---
 
-Sorry, the requested page wasn't found on the server.
+Oh dear, either you or I have caused this bad link. If it was me, I'm sorry. Maybe try a search 
