2012-04-18-this-time.md

--- a/_posts/2012-04-18-this-time.md
+++ b/_posts/2012-04-18-this-time.md
@@ -1,25 +1,18 @@
 ---
-id: 773
 title: 'This time&#8230;&#8230;&#8230;&#8230;&#8230;&#8230;.'
 date: 2012-04-18T14:10:48+00:00
 author: Mark Everard
 layout: post
-guid: http://www.markeverard.com/blog/?p=773
 permalink: /2012/04/18/this-time/
 dsq_thread_id:
-  - "1280919403"
   - "1280919403"
 categories:
   - Opinion
 ---
-<p style="text-align: center;">
-  <a href="http://markeverard.azurewebsites.net/wp-content/uploads/2012/04/jMHoE.jpg"><img class="aligncenter  wp-image-774" title="This time" src="http://markeverard.azurewebsites.net/wp-content/uploads/2012/04/jMHoE.jpg" alt="This time" width="672" height="511" srcset="https://www.markeverard.com/wp-content/uploads/2012/04/jMHoE.jpg 960w, https://www.markeverard.com/wp-content/uploads/2012/04/jMHoE-300x228.jpg 300w, https://www.markeverard.com/wp-content/uploads/2012/04/jMHoE-768x584.jpg 768w, https://www.markeverard.com/wp-content/uploads/2012/04/jMHoE-720x548.jpg 720w, https://www.markeverard.com/wp-content/uploads/2012/04/jMHoE-580x441.jpg 580w, https://www.markeverard.com/wp-content/uploads/2012/04/jMHoE-320x243.jpg 320w" sizes="(max-width: 672px) 100vw, 672px" /></a>
-</p>
+
+![This time?](http://markeverard.azurewebsites.net/wp-content/uploads/2012/04/jMHoE.jpg)
+
 
 This isn&#8217;t mine &#8211; in fact I don&#8217;t know who the credit should go to. However, it was so great I wanted to put it somewhere relevant where I could see it often.
 
 **UPDATE** (16th May 2012): It originally came Manu Cornet at [Bonkers World](http://www.bonkersworld.net/ "Bonkers World"). Awesome stuff
-
-&nbsp;
-
-&nbsp;
