2012-04-18-this-time.md

--- a/_posts/2012-04-18-this-time.md
+++ b/_posts/2012-04-18-this-time.md
@@ -3,6 +3,7 @@ title: 'This time&#8230;&#8230;&#8230;&#8230;&#8230;&#8230;.'
 date: 2012-04-18T14:10:48+00:00
 author: Mark Everard
 layout: post
+color: rgb(0,0,0)
 permalink: /2012/04/18/this-time/
 dsq_thread_id:
   - "1280919403"
