2012-04-18-this-time.md

--- a/_posts/2012-04-18-this-time.md
+++ b/_posts/2012-04-18-this-time.md
@@ -11,7 +11,7 @@ categories:
   - Opinion
 ---
 
-![This time?](http://markeverard.azurewebsites.net/wp-content/uploads/2012/04/jMHoE.jpg)
+![This time?](/assets/uploads/2012/04/jMHoE.jpg)
 
 
 This isn&#8217;t mine &#8211; in fact I don&#8217;t know who the credit should go to. However, it was so great I wanted to put it somewhere relevant where I could see it often.
