--- a/pages/404.md
+++ b/pages/404.md
@@ -1,8 +1,9 @@
 ---
 layout: page
 title: "404 Page not found"
-color: rgb(0,0,0)
+featured-img: /assets/img/pexels/circuit.jpeg
 permalink: /404.html
+
 hide: true
 ---
 
