--- a/pages/404.md
+++ b/pages/404.md
@@ -1,7 +1,7 @@
 ---
 layout: page
 title: "404 Page not found"
-featured-img: "/assets/img/pexels/circuit.jpeg"
+feature-img: "/assets/img/pexels/circuit.jpeg"
 permalink: /404.html
 
 hide: true
